src/components/Board/Details.module.css
.modal {
  width: 100%;
  margin: 28px 0;
}

.container {
  background-color: #f4f5f7;
  border-radius: 2px;
  min-height: 300px;
  overflow: hidden;
  padding: 8px 24px;
  display: flex;
  flex-direction: column;
}

.header {
  margin: 8px 0;
  min-height: 32px;
  padding: 4px 0;
  display: flex;
  align-items: center;
  gap: 8px;
  overflow: hidden;
}

.headerContent {
  display: flex;
  flex-direction: column;
  gap: 8px;
  flex-grow: 1;
}

.icon {
  color: #42526e;
  font-size: 20px;
  width: 32px;
  height: 32px;
  line-height: 32px;
  align-self: flex-start;
}

.titleContainer {
  align-items: center;
}

.subtitle {
  font-weight: 600;
  font-size: 16px;
  line-height: 20px;
  min-width: 40px;
  min-height: 18px;
  color: #172b4d;
}

.closeButton {
  align-self: flex-start;
  background-color: transparent;
  outline: none;
  border: none;
  border-radius: 50%;
  min-height: 32px;
  min-width: 32px;
  padding: 4px;
  transition: background-color 85ms, color 85ms;
}

.closeButton:hover {
  cursor: pointer;
  background-color: #091e4214;
  color: #42526e;
}

.title {
  font-weight: 600;
  font-size: 20px;
  line-height: 24px;
  min-height: 24px;
  width: 100%;
  color: #172b4d;
}

.editTitle {
  background-color: white;
  border-radius: 3px;
  box-shadow: none;
  padding: 4px 8px;
  resize: none;
  box-sizing: border-box;
  border: none;
  outline: none;
  margin: -4px -8px;
  transition-duration: 85ms;
  transition-property: background-color, border-color, box-shadow;
  transition-timing-function: ease;
}

.editTitle:focus {
  box-shadow: inset 0 0 0 2px #0079bf;
}

.placeholder {
  background-color: #091e420a;
  border: none;
  border-radius: 3px;
  min-height: 40px;
  padding: 8px 12px;
  color: #172b4d;
}

.detailsInput {
  background-color: white;
  box-shadow: none;
  min-height: 108px;
  border-color: #091e4221;
  margin-bottom: 4px;
  width: 100%;
  box-sizing: border-box;
  border-radius: 3px;
  line-height: 20px;
  padding: 8px 12px;
  outline: none;
  border: none;
  color: #172b4d;
  transition-duration: 85ms;
  transition-property: border-color, box-shadow;
  transition-timing-function: ease;
  resize: none;
}

.detailsInput:focus {
  box-shadow: inset 0 0 0 2px #0079bf;
}

@media screen and (min-width: 768px) {
  .modal {
    width: 57.5%;
  }

  .gutter {
    margin-left: 40px;
  }
}

